<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/fondo4">

    <TextView
        style="@style/viewCustom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/lyRegistro"
        android:text="Registro"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textColor="@color/deep_cyan"
        android:padding="10dp"
        android:id="@+id/txRegistro"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lyRegistro"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/txRegistro">
        <!-- Nombre -->
        <EditText
            android:id="@+id/etNombre"
            style="@style/viewCustom"
            android:hint="@string/name"
            />

        <!-- Apellido -->
        <EditText
            android:id="@+id/etApellido"
            style="@style/viewCustom"
            android:hint="@string/apellido"
            />

        <!-- Edad -->
        <EditText
            android:id="@+id/etEdad"
            style="@style/viewCustom"
            android:hint="@string/edad"
            android:inputType="number"
            />

        <!-- Email -->
        <EditText
            android:id="@+id/etEmail"
            style="@style/viewCustom"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />

        <!-- Sexo -->
        <Spinner
            android:id="@+id/spinnerSexo"
            style="@style/viewCustom"
            android:entries="@array/arraySexo"
            />

        <!-- Contraseña -->
        <EditText
            android:id="@+id/etPassword"
            style="@style/viewCustom"
            android:hint="@string/password"
            android:inputType="textPassword"
            />

        <!-- Ocupación -->
        <Spinner
            android:id="@+id/spinnerOcupacion"
            style="@style/viewCustom"
            android:prompt="@string/ocupacion_prompt"
            android:entries="@array/arrayProfesion"
            />

        <!-- Habilidades -->
        <Spinner
            android:id="@+id/spinnerHabilidades"
            style="@style/viewCustom"
            android:entries="@array/habilidades"
           />
    </LinearLayout>
    <!-- Rol -->
    <RadioGroup
        android:id="@+id/rgRol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/lyRegistro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lyCodI"
        android:gravity="center_horizontal">

        <RadioButton
            android:id="@+id/rbVoluntario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voluntario"
            android:layout_marginRight="10dp"/>

        <RadioButton
            android:id="@+id/rbAdministrador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/administrador" />
    </RadioGroup>

    <!-- Código institución (solo si es admin) -->
    <LinearLayout
        android:id="@+id/lyCodI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/lyTerms"
        app:layout_constraintTop_toBottomOf="@+id/rgRol"
        tools:layout_editor_absoluteX="16dp" >
        <EditText
            style="@style/viewCustom"
            android:hint="@string/codInstitucion"
            android:visibility="visible"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyTerms"
        style="@style/viewCustom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrarse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyCodI">

        <CheckBox
            android:id="@+id/cbAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acept"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tvTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/terms"
            android:textColor="@color/burnt_umber"
            android:textSize="11sp" />
    </LinearLayout>
    <!-- Botón registrarse -->
    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terminarRegistro"
        android:backgroundTint="@color/deep_cyan"
        app:layout_constraintTop_toBottomOf="@id/lyTerms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>