<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/fondo4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Institución -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="12dp">

            <TextView
                android:id="@+id/tvInstitucion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/institucion"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
        </androidx.cardview.widget.CardView>

        <!-- Nombre del Evento -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_evento"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/etNombreEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Tipo de Evento -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="12dp">
            <Spinner
                android:id="@+id/spinnerTipoEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:padding="8dp"
                android:entries="@array/tipoEvento" />
        </androidx.cardview.widget.CardView>

        <!-- Título Mapa -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/ubicaciones_evento"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
        <EditText
            android:id="@+id/etUbicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ubicacion"/>
        <Button
            android:id="@+id/btnAddUbicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_location"
            android:layout_gravity="center"
            android:backgroundTint="@color/deep_cyan"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUbicaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:minHeight="50dp" />
        <!-- Duración del evento -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/duracion_evento"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <!-- Fecha inicio - fin -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <Button
                android:id="@+id/btnFechaInicio"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:text="@string/fecha_inicio"
                app:icon="@drawable/ic_calendar"
                app:contentDescription="@string/fecha_inicio" />
            <Button
                android:id="@+id/btnFechaFin"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha_fin"
                app:icon="@drawable/ic_calendar"
                app:contentDescription="@string/fecha_fin" />
        </LinearLayout>
        <!-- Turnos -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turnos"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />
            <Button
                android:id="@+id/btnAddTurno"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anadir_turno"
                app:icon="@drawable/ic_add"
                app:iconGravity="textStart"
                app:contentDescription="@string/anadir_turno" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTurnos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_outline_grey" />
        <!-- Voluntarios requeridos -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/voluntarios_requeridos">
            <EditText
                android:id="@+id/etVoluntariosRequeridos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Profesiones requeridas -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/profesiones_requeridas"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSeleccionarProfesiones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seleccionar_profesiones"
                app:icon="@drawable/ic_add"
                android:backgroundTint="@color/deep_cyan"
                app:contentDescription="@string/seleccionar_profesiones" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupProfesiones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
        </LinearLayout>
        <!-- Habilidades necesarias -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/habilidades_necesarias"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupHabilidades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/anadir_habilidad"
            app:endIconMode="dropdown_menu">

            <AutoCompleteTextView
                android:id="@+id/actHabilidades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Tareas a realizar -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/tareas_a_realizar"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTareas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_outline_grey" />

        <Button
            android:id="@+id/btnAddTarea"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/anadir_tarea"
            app:icon="@drawable/ic_add"
            app:contentDescription="@string/anadir_tarea" />

        <!-- Imagen del evento
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/imagen_evento"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <ImageView
            android:id="@+id/ivEvento"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:background="@color/material_grey_300"
            android:src="@drawable/ic_add_photo"
            android:contentDescription="@string/imagen_evento" />

        <Button
            android:id="@+id/btnSeleccionarImagen"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/seleccionar_imagen"
            app:icon="@drawable/ic_image"
            app:contentDescription="@string/seleccionar_imagen" />-->

        <!-- Botón Crear Evento -->
        <Button
            android:id="@+id/btnCrearEvento"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/crear_evento"
            android:backgroundTint="@color/deep_cyan"
            app:contentDescription="@string/crear_evento" />
    </LinearLayout>
</ScrollView>

